# reserve-back

./: db.sqlite3  fly.toml  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializer.py  views.py
core/migrations/: 0001_initial.py  0002_rename_comentarios_comentario.py  0003_remove_ong_whatsapp_ong_image.py  0004_alter_ong_image.py  0005_alter_midia_midia.py  0006_ong_senha.py  0007_ong_descricao.py  0008_post_likes.py  0009_remove_ong_senha_ong_password_alter_ong_email.py  0010_alter_ong_options_alter_ong_managers_ong_date_joined_and_more.py  0011_remove_ong_uf.py  0012_alter_ong_descricao.py  0013_alter_ong_password.py  0014_alter_ong_password.py  0015_alter_ong_password.py  0016_ong_raw_password.py  0017_remove_ong_raw_password.py
reserve/: asgi.py  settings.py  urls.py  wsgi.py
