[tool.poetry]
name = "reserveapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.1"
Pillow = "^9.2.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
